Add add-opens option to unit surefire test suite